--- a/templates/index.html
+++ b/templates/index.html
@@ -2,28 +2,25 @@
 <html lang="is" dir="ltr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title }}</title>
+    <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/lux/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.8.6/dist/htmx.min.js" defer></script>
 </head>
 
 <body>
-  <header class="my-5">
-    <div class="container">
-      <h1 class="display-4 text-uppercase">
-        {{ title }}
-        <span class="fs-5 text-info">{{ date }}</span>
-      </h1>
-    </div>
-  </header>
-  <main class="container">
-    <section id="schedule">
-      {% for listing in listings %}
-      {% include "listing.html" %}
-      {% endfor %}
-    </section>
-  </main>
+    <header class="my-5">
+        <div class="container">
+            <h1 class="display-3 fw-bold">{{ title }}</h1>
+        </div>
+    </header>
+    <main class="container">
+        <section id="schedule" hx-get="/_listings" hx-trigger="load">
+            <div class="htmx-indicator spinner-border text-muted"></div>
+        </section>
+    </main>
 </body>
 
 </html>
