--- a/templates/_listings.html
+++ b/templates/_listings.html
@@ -8,8 +8,8 @@
     </div>
     <div class="col-10">
         <h4 class="text-primary">{{ listing.title() }}</h4>
-        {% if listing.has_description() %}
-        <p class="text-muted">{{ listing.description() }}</p>
+        {% if listing.has_details() %}
+        <p class="text-muted">{{ listing.details() }}</p>
         {% endif %}
         {% if listing.is_live() %}
         <p class="badge bg-danger">bein útsending</p>
