Updated for axum 0.7

--- a/templates/_listings.html
+++ b/templates/_listings.html
@@ -14,7 +14,7 @@
         {% if listing.is_live() %}
         <p class="badge bg-danger">bein útsending</p>
         {% else if listing.is_repeat() %}
-        <p class="badge bg-success">endursýning</p>
+        <p class="badge bg-success">endurtekinn</p>
         {% endif %}
     </div>
 </div>
