--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/lux/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.9.3/dist/htmx.min.js" defer></script>
+    <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/lux/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.9.9/dist/htmx.min.js" defer></script>
 </head>
 
 <body>
     <header class="my-3">
         <div class="container">
             <h1 class="display-3 fw-bold">{{ title }}</h1>
+            <p class="text-muted">{{ date }}</p>
         </div>
     </header>
     <main class="container">
-        <section id="schedule" hx-get="/_listings" hx-trigger="load">
+        <section id="schedule" data-hx-get="/_listings" data-hx-trigger="load">
             <div class="htmx-indicator spinner-border text-muted"></div>
         </section>
     </main>
