--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <header class="my-3">
         <div class="container">
             <h1 class="display-3 fw-bold">{{ title }}</h1>
-            <p class="text-info">{{ date }}</p>
+            <h4 class="text-info">{{ date }}</h4>
         </div>
     </header>
     <main class="container">
