Moved htmx template into dedicated subfolder

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <main class="container">
-        <section id="schedule" data-hx-get="/_listings" data-hx-trigger="load">
+        <section id="schedule" hx-get="/htmx/listings" hx-trigger="load">
             <div class="htmx-indicator spinner-border text-muted"></div>
         </section>
     </main>
